[gd_scene load_steps=4 format=3 uid="uid://dt4vt666l273d"]

[ext_resource type="Script" path="res://screen/GameTitle/GyroscopeAlign.gd" id="1_phjd5"]
[ext_resource type="Texture2D" uid="uid://dieemtu7ox58d" path="res://screen/GameMain/circle.png" id="1_y0rpr"]
[ext_resource type="Texture2D" uid="uid://daa7x77m0tc7x" path="res://screen/GameMain/arrow.png" id="2_bt2uu"]

[node name="GyroscopeAlign" type="Node2D"]
script = ExtResource("1_phjd5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -489.0
offset_top = -314.0
offset_right = 493.0
offset_bottom = 323.0
color = Color(0, 0, 0, 0.501961)
metadata/_edit_lock_ = true

[node name="Circle" type="Sprite2D" parent="."]
texture = ExtResource("1_y0rpr")
metadata/_edit_lock_ = true

[node name="Base" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Left" type="Sprite2D" parent="Base"]
modulate = Color(1, 0, 0, 1)
position = Vector2(-270, 0)
rotation = 1.5708
scale = Vector2(0.285, 0.285)
texture = ExtResource("2_bt2uu")

[node name="Right" type="Sprite2D" parent="Base"]
modulate = Color(1, 0, 0, 1)
position = Vector2(270, 0)
rotation = -1.5708
scale = Vector2(0.285, 0.285)
texture = ExtResource("2_bt2uu")

[node name="Node" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Left" type="Sprite2D" parent="Node"]
position = Vector2(-270, 0)
rotation = 1.5708
scale = Vector2(0.285, 0.285)
texture = ExtResource("2_bt2uu")

[node name="Right" type="Sprite2D" parent="Node"]
position = Vector2(270, 0)
rotation = -1.5708
scale = Vector2(0.285, 0.285)
texture = ExtResource("2_bt2uu")

[node name="Label" type="Label" parent="."]
offset_left = -84.0
offset_top = -125.0
offset_right = 92.0
offset_bottom = -78.0
text = "陀螺仪校准
将白色箭头对准红色箭头"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Align" type="Button" parent="."]
offset_left = -126.0
offset_top = -34.0
offset_right = -86.0
offset_bottom = -3.0
text = "校准"
metadata/_edit_lock_ = true

[node name="Close" type="Button" parent="."]
offset_left = 86.0
offset_top = -34.0
offset_right = 126.0
offset_bottom = -3.0
text = "返回"
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="."]
offset_left = -90.0
offset_top = 40.0
offset_right = 86.0
offset_bottom = 87.0
text = "灵敏度调整"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="."]
offset_left = -142.0
offset_top = 108.0
offset_right = 145.0
offset_bottom = 124.0
min_value = 1.0
max_value = 2000.0
value = 1000.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="Align" to="." method="_on_align_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
